Fixed whitespace between items

--- a/src/components/footer/FooterNav.css
+++ b/src/components/footer/FooterNav.css
@@ -1,4 +1,5 @@
 .footer-nav {
+    height: 50px;
     position: fixed;
     bottom: 0;
     background-color:#141414;
@@ -7,7 +8,7 @@
     flex-direction: row;
     justify-content: space-between;
     color: white;
-    padding: 5px 30px;
+    padding: 5px 40px;
 }
 a {
     color: white;
@@ -24,6 +25,7 @@ a {
     border: 3.5px solid white;
     padding: 2px 5px;
     border-radius: 5px;
+
 }
 .reservations:hover {
     background-color: royalblue;
