--- a/src/components/menu/css/DrinkMenu.css
+++ b/src/components/menu/css/DrinkMenu.css
@@ -1,13 +1,14 @@
 .drink-menu {
     padding: 50px 0;
     border-bottom: 1px solid white;
+    font-size: 1.5rem;
 }
 .drinks-container {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
     justify-content: center;
 }
 .drinks-container > * {
-    padding: 20px 55px;
+    padding: 20px 0px;
+  
 }
