--- a/src/components/menu/css/ExtraMenuItem.css
+++ b/src/components/menu/css/ExtraMenuItem.css
@@ -1,3 +1,3 @@
 .extra-menu-item {
-    margin: 10px 25px;
+    margin: 10px 10px;
 }
