--- a/src/components/menu/css/MainMenuItem.css
+++ b/src/components/menu/css/MainMenuItem.css
@@ -19,7 +19,7 @@
     font-family: 'Over the Rainbow', cursive;
 }
 .main-menu-item {
-    padding: 20px 0;
+    padding: 20px;
     width: 445px;
 }
 .menu-header {
